Базовая разметка всех страниц по БЭМ

--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
       </header>
       <main class="page-catalog">
           <div class="page-catalog__wrapper">
-              <h1 class="page-catalog__caption">Каталог Магазина Cat Energy</h1>
+              <h1 class="page-catalog__caption">Каталог продукции</h1>
               <section class="catalog">
                   <ul class="catalog__list">
                       <li class="catalog__item catalog__item--chicken">
@@ -230,24 +230,24 @@
                     <p class="catalog-promo__item"> Закажите все и получите цехол для кота в подарок!</p>
                 </div>
               </section>
-          <section class="partnership">
-              <div class="partnership__wrapper">
-                <header class="partnership__header">
-                    <p class="partnership__invite">
-                        Приглашаем к сотрудничеству дилеров!
-                    </p>
-                    <p class="partnership__address">
-                        ул. Большая Конюшенная, д.19/8 Санкт-Петербургю
-                    </p>
-                </header>
-                <div class="partnership_map-wrapper">
-                </div>
-              </div>
-          </section>
-        </div>
+          </div>
       </main>
       <footer class="page-footer">
           <div class="page-footer__wrapper">
+              <section class="partnership">
+                  <div class="partnership__wrapper">
+                    <div class="partnership__header">
+                        <p class="partnership__invite">
+                            Приглашаем к сотрудничеству дилеров!
+                        </p>
+                        <p class="partnership__address">
+                            ул. Большая Конюшенная, д.19/8 Санкт-Петербургю
+                        </p>
+                    </div>
+                    <div class="partnership_map-wrapper">
+                    </div>
+                  </div>
+              </section>
               <p class="page-footer__caption"><b>CAT</b> ENERGY</p>
                 <div class="page-footer__social-wrapper social">
                     <ul class="social__list">
