--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                           Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
                           </p>
                           <button class="targets__button" type="button">
-                               Каталог Slim <img src="http://placehold.it/20x15">
+                               Каталог Slim <img src="http://placehold.it/20x15" alt="Каталог Slim">
                           </button>
                       </li>
                       <li class="targets__item targets__item--mass">
@@ -52,7 +52,7 @@
                           Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
                           </p>
                           <button class="targets__button" type="button">
-                                Каталог Pro <img src="http://placehold.it/20x15">
+                                Каталог Pro <img src="http://placehold.it/20x15" alt="Каталог Pro">
                           </button>
                       </li>
                   </ul>
@@ -116,24 +116,24 @@
                   </p>
               </div>
           </section>
-          <section class="partnership">
-              <div class="partnership__wrapper">
-                <header class="partnership__header">
-                    <p class="partnership__invite">
-                        Приглашаем к сотрудничеству дилеров!
-                    </p>
-                    <p class="partnership__address">
-                        ул. Большая Конюшенная, д.19/8 Санкт-Петербургю
-                    </p>
-                </header>
-                <div class="partnership_map-wrapper">
-                    
-                </div>
-              </div>
-          </section>
       </main>
       <footer class="page-footer">
           <div class="page-footer__wrapper">
+              <section class="partnership">
+                  <div class="partnership__wrapper">
+                    <div class="partnership__header">
+                        <p class="partnership__invite">
+                            Приглашаем к сотрудничеству дилеров!
+                        </p>
+                        <p class="partnership__address">
+                            ул. Большая Конюшенная, д.19/8 Санкт-Петербургю
+                        </p>
+                    </div>
+                    <div class="partnership_map-wrapper">
+
+                    </div>
+                  </div>
+              </section>
               <p class="page-footer__caption"><b>CAT</b> ENERGY</p>
                 <div class="page-footer__social-wrapper social">
                     <ul class="social__list">
