--- a/index.html
+++ b/index.html
@@ -3,156 +3,119 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи</title>
+    <link href="source/css/style.css" rel="stylesheet">
   </head>
   <body>
-      <header class="page-header">
-          <span class="page-header__logo-image">
-              <img src="http://placehold.it/50x30" alt="Логотип Cat Energy">
-          </span>
-          <p class="page-header__caption"><b>CAT</b> ENERGY</p>
-          <nav class="page-header__nav main-nav">
-              <button class="main-nav__toggle" type="button">Открыть меню</button>
-                <div class="main-nav__wrapper">
-                    <ul class="main-nav__list site-list">
-                        <li class="site-list__item">
-                            <a>Главная</a>
-                        </li>
-                        <li class="site-list__item">
-                            <a href="catalog.html">Каталог продукции</a>
-                        </li>
-                        <li class="site-list__item">
-                            <a href="form.html">Подбор программы</a>
-                        </li>
-                    </ul>
-                </div>
-          </nav>
-      </header>
-      <main class="page-main">
-          <h1 class="visually-hidden">Магазин питания для котов Cat energy</h1>
-          <section class="promo">
-              <h2 class="promo__caption">Функциональное питание для котов</h2>
-              <p class="promo__slogan">Занялся собой ? Займись котом !</p>
-              <button class="promo__button button" type="button">Подобрать Программу</button>
-          </section>
-          <section class="targets">
-              <div class="targets__wrapper">
-                  <ul class="targets__list">
-                      <li class="targets__item targets__item--slim">
-                          <h3 class="targets__title">Похудение</h3>
-                          <p class="targets__description">
-                          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-                          </p>
-                          <button class="targets__button" type="button">
-                               Каталог Slim <img src="http://placehold.it/20x15" alt="Каталог Slim">
-                          </button>
-                      </li>
-                      <li class="targets__item targets__item--mass">
-                          <h3 class="targets__title">Набор массы</h3>
-                          <p class="targets__description">
-                          Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-                          </p>
-                          <button class="targets__button" type="button">
-                                Каталог Pro <img src="http://placehold.it/20x15" alt="Каталог Pro">
-                          </button>
-                      </li>
-                  </ul>
-              </div>
-          </section>
-          <section class="product-description">
-              <div class="product-description__wrapper">
-                  <h2 class="product-description__caption">Как это работает</h2>
-                  <ul class="product-description__list">
-                      <li class="product-description__item product-description__item--nutrition">
-                        <p class="product-description__description">
-                            Функциональное питание содержит только полезные питательные вещества.
-                          </p>
-                      </li>
-                      <li class="product-description__item product-description__item--powder">
-                        <p class="product-description__description">
-                            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-                          </p>
-                      </li>
-                      <li class="product-description__item product-description__item--change">
-                        <p class="product-description__description">
-                            Замените один-два приема обычной еды на наше функциональное питание.
-                          </p>
-                      </li>
-                      <li class="product-description__item product-description__item--month">
-                        <p class="product-description__description">
-                            Уже через месяй наслаждайтесь изменениями к лучшему вашего питомца!
-                          </p>
-                      </li>
-                  </ul>
-              </div>
-          </section>
-          <section class="example">
-              <h2 class="example__caption">Живой пример</h2>
-              <p class="example__description">
-                Борис сбросил 5 кг ща 2 месяца, просто заменив свой обыныый корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-              </p>
-              <div class="example__list-wrapper">
-                  <div class="example__result result-item">
-                      <span class="result-item__text">5 КГ</span>
-                      <span class="result-item__description">снижение веса</span>
-                  </div>
-                  <div class="example__result">
-                    <span class="result-item__text">60 ДНЕЙ</span>
-                    <span class="result-item__description">затрачено времени</span>
-                  </div>
-              </div>
-              <span class="example__money-spent">ЗАтраты на питание:15 000 руб.</span>
-              <div class="example__slider-wrapper slider">
-                  <ul class="example__slider-list slider__list">
-                    <li class="example__slider-list example__slider-list--fat slider__item">
-                        <img src="http://placehold.it/50x30" alt="Было">  
-                    </li>
-                    <li class="example__slider-list example__slider-list--slim slider__item">
-                        <img src="http://placehold.it/50x30" alt="Стало">
-                    </li>
-                  </ul>
-                  <p class="example__toggles slider__toggles">
-                    <button class="slider__toggle" type="button">БЫЛО</button>
-                    <button class="slider__toggle" type="button">СТАЛО</button>
-                  </p>
-              </div>
-          </section>
-      </main>
-      <footer class="page-footer">
-          <div class="page-footer__wrapper">
-              <section class="partnership">
-                  <div class="partnership__wrapper">
-                    <div class="partnership__header">
-                        <p class="partnership__invite">
-                            Приглашаем к сотрудничеству дилеров!
-                        </p>
-                        <p class="partnership__address">
-                            ул. Большая Конюшенная, д.19/8 Санкт-Петербургю
-                        </p>
-                    </div>
-                    <div class="partnership_map-wrapper">
-
-                    </div>
-                  </div>
-              </section>
-              <p class="page-footer__caption"><b>CAT</b> ENERGY</p>
-                <div class="page-footer__social-wrapper social">
-                    <ul class="social__list">
-                        <li class="social__item ">
-                            <a class="social__link social__link--vkontakte" href="#">1</a>
-                        </li>
-                        <li class="social__item ">
-                            <a class="social__link social__link--instagram" href="#">2</a>
-                        </li>
-                        <li class="social__item ">
-                            <a class="social__link social__link--facebook" href="#">3</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="page-footer__developers developers">
-                    <a class="developers__item developers__item--text" href="#">HTML Academy</a>
-                    <a class="developers__item developers__item--pic" href="#"><img src="http://placehold.it/50x30" alt="Логотип htmlacademy"></a>
-                </div>
+    <header class="page-header">
+      <img src="http://placehold.it/50x30" alt="Логотип Cat Energy">
+      <a class="page-header__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
+      <input id="menu_sw" type="checkbox">
+      <label for="menu_sw">Открыть меню</label>
+      <nav class="page-header__nav main-nav">
+        <ul class="main-nav__list ">
+          <li class="main-nav__item main-nav__item--active">
+            <a>Главная</a>
+          </li>
+          <li class="main-nav__item ">
+            <a href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-nav__item">
+            <a href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="page-main">
+      <h1 class="visually-hidden">Магазин питания для котов Cat energy</h1>
+      <section class="promo">
+        <h2 class="promo__caption">Функциональное питание для котов</h2>
+        <p class="promo__slogan">Занялся собой? Займись котом!</p>
+        <a class="promo__button button" href="#">Подобрать Программу</a>
+      </section>
+      <section class="targets">
+        <ul class="targets__list">
+          <li class="targets__item">
+            <h3 class="targets__title targets__title--slim">Похудение</h3>
+            <p class="targets__description">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+            </p>
+            <a class="targets__button" href="#">Каталог Slim</a>
+          </li>
+          <li class="targets__item">
+            <h3 class="targets__title targets__title--mass">Набор массы</h3>
+            <p class="targets__description">
+              Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="targets__button" href="#">Каталог Pro</a>
+          </li>
+        </ul>
+      </section>
+      <section class="product-description">
+        <h2 class="product-description__caption">Как это работает</h2>
+        <ul class="product-description__list">
+          <li class="product-description__item product-description__item--nutrition">
+            Функциональное питание содержит только полезные питательные вещества.
+          </li>
+          <li class="product-description__item product-description__item--powder">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          </li>
+          <li class="product-description__item product-description__item--change">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </li>
+          <li class="product-description__item product-description__item--month">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </li>
+        </ul>
+      </section>
+      <section class="example">
+        <h2 class="example__caption">Живой пример</h2>
+        <p class="example__description">
+          Борис сбросил 5 кг ща 2 месяца, просто заменив свой обыныый корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+        <div class="example__list-wrapper">
+          <div class="example__result result-item">
+            <span class="result-item__text">5 кг</span>
+            <span class="result-item__description">снижение веса</span>
           </div>
-      </footer>
+          <div class="example__result result-item">
+            <span class="result-item__text">60 дней</span>
+            <span class="result-item__description">затрачено времени</span>
+          </div>
+        </div>
+        <h4 class="example__money-spent">затраты на питание: 15 000 руб.</h4>
+        <input type="checkbox" id="pic_sw">
+        <div class="example__before">
+          <img src="http://placehold.it/50x30" alt="Было">
+        </div>
+        <div class="example__after">
+          <img src="http://placehold.it/50x30" alt="Стало">
+        </div>
+        <label for="pic_sw">было</label>
+        <label for="pic_sw">*</label>
+        <label for="pic_sw">стало</label>
+      </section>
+    </main>
+    <footer class="page-footer">
+      <section class="partnership">
+        <div class="partnership__header">
+          <h3 class="partnership__invite"> приглашаем к сотрудничеству дилеров!</h3>
+          <p class="partnership__address">
+            ул. Большая Конюшенная, д.19/8 Санкт-Петербург
+          </p>
+        </div>
+        <div class="partnership__map-wrapper">
+        </div>
+      </section>
+      <a class="page-footer__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
+      <div class="page-footer__social social">
+        <a class="social__link social__link--vkontakte" href="#">vkontante</a>
+        <a class="social__link social__link--instagram" href="#">instagram</a>
+        <a class="social__link social__link--facebook" href="#">facebook</a>
+      </div>
+      <div class="page-footer__developers developers">
+        <a class="developers__item developers__item--text" href="#">HTML Academy</a>
+        <a class="developers__item developers__item--pic" href="#">Логотип HTML Academy</a>
+      </div>
+    </footer>
   </body>
 </html>
