--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <header class="page-header">
-      <img src="http://placehold.it/50x30" alt="Логотип Cat Energy">
-      <a class="page-header__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
-      <input id="menu_sw" type="checkbox">
-      <label for="menu_sw">Открыть меню</label>
+      <div class="page-header__wrapper">
+          <img src="http://placehold.it/50x30" alt="Логотип Cat Energy">
+          <a class="page-header__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
+          <input id="menu_sw" type="checkbox">
+          <label for="menu_sw">Открыть меню</label>
+      </div>
       <nav class="page-header__nav main-nav">
         <ul class="main-nav__list ">
           <li class="main-nav__item main-nav__item--active">
@@ -33,22 +35,20 @@
         <a class="promo__button button" href="#">Подобрать Программу</a>
       </section>
       <section class="targets">
-        <ul class="targets__list">
-          <li class="targets__item">
+          <div class="targets__item">
             <h3 class="targets__title targets__title--slim">Похудение</h3>
             <p class="targets__description">
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
             </p>
             <a class="targets__button" href="#">Каталог Slim</a>
-          </li>
-          <li class="targets__item">
+          </div>
+          <div class="targets__item">
             <h3 class="targets__title targets__title--mass">Набор массы</h3>
             <p class="targets__description">
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
             </p>
             <a class="targets__button" href="#">Каталог Pro</a>
-          </li>
-        </ul>
+          </div>
       </section>
       <section class="product-description">
         <h2 class="product-description__caption">Как это работает</h2>
@@ -103,18 +103,20 @@
             ул. Большая Конюшенная, д.19/8 Санкт-Петербург
           </p>
         </div>
-        <div class="partnership__map-wrapper">
-        </div>
       </section>
-      <a class="page-footer__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
-      <div class="page-footer__social social">
-        <a class="social__link social__link--vkontakte" href="#">vkontante</a>
-        <a class="social__link social__link--instagram" href="#">instagram</a>
-        <a class="social__link social__link--facebook" href="#">facebook</a>
+      <div class="map-wrapper">map
       </div>
-      <div class="page-footer__developers developers">
-        <a class="developers__item developers__item--text" href="#">HTML Academy</a>
-        <a class="developers__item developers__item--pic" href="#">Логотип HTML Academy</a>
+      <div class="page-footer__wrapper">    
+          <a class="page-footer__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
+          <div class="page-footer__social social">
+            <a class="social__link social__link--vkontakte" href="#">vkontante</a>
+            <a class="social__link social__link--instagram" href="#">instagram</a>
+            <a class="social__link social__link--facebook" href="#">facebook</a>
+          </div>
+          <div class="page-footer__developers developers">
+            <a class="developers__item developers__item--text" href="#">HTML Academy</a>
+            <a class="developers__item developers__item--pic" href="#">Логотип HTML Academy</a>
+          </div>
       </div>
     </footer>
   </body>
