сверстана часть index

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section class="example">
         <h2 class="example__caption">Живой пример</h2>
         <p class="example__description">
-          Борис сбросил 5 кг ща 2 месяца, просто заменив свой обыныый корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обыныый корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
         <div class="example__list-wrapper">
           <div class="example__result result-item">
