частично завершен catalog

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
         <h1 class="page-catalog__caption">Каталог продукции</h1>
         <section class="catalog">
           <article class="catalog__item catalog__item--chicken-small">
-            <a class="catalog__link" href="#"><img src="http://placehold.it/70x70" alt="Cat Energy"></a>
+            <a class="catalog__link" href="#"><img src="../530049-cat-energy/source/img/chicken-big-mobile@1x.jpg" alt="Cat Energy pro 1000"></a>
             <div class="catalog__wrapper">
               <a class="catalog__caption" href="#">
                 <h3>cat energy pro 500 г</h3>
@@ -55,7 +55,7 @@
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
           <article class="catalog__item catalog__item--chicken-big">
-            <a class="catalog__link" href="#"><img src="http://placehold.it/70x70" alt="Cat Energy"></a>
+            <a class="catalog__link" href="#"><img src="../530049-cat-energy/source/img/chicken-small-mobile@1x.jpg" alt="Cat Energy pro 500"></a>
             <div class="catalog__wrapper">
               <a class="catalog__caption"  href="#">
                 <h3>cat energy pro 1000 г</h3>
@@ -78,7 +78,7 @@
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
           <article class="catalog__item catalog__item--fish">
-            <a class="catalog__link" href="#"><img src="http://placehold.it/70x70" alt="Cat Energy"></a>
+            <a class="catalog__link" href="#"><img src="../530049-cat-energy/source/img/fish-big-mobile@1x.jpg" alt="Cat Energy pro 1000"></a>
             <div class="catalog__wrapper">
               <a class="catalog__caption"  href="#">
                 <h3>cat energy pro 500 г</h3>
