--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
         </ul>
       </nav>
     </header>
+    <section class="promo">
+        <div class="promo__wrapper">
+            <h2 class="promo__caption">Функциональное питание для котов</h2>
+            <p class="promo__slogan">Занялся собой? Займись котом!</p>
+            <a class="promo__button button" href="#">Подобрать Программу</a>
+        </div>
+    </section>
     <main class="page-main">
       <h1 class="visually-hidden">Магазин питания для котов Cat energy</h1>
-      <section class="promo">
-        <h2 class="promo__caption">Функциональное питание для котов</h2>
-        <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <a class="promo__button button" href="#">Подобрать Программу</a>
-      </section>
       <section class="targets">
           <div class="targets__item">
             <h3 class="targets__title targets__title--slim">Похудение</h3>
@@ -67,35 +69,43 @@
           </li>
         </ul>
       </section>
-      <section class="example">
-        <h2 class="example__caption">Живой пример</h2>
-        <p class="example__description">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <div class="example__list-wrapper">
-          <div class="example__result">
-            <span class="example__number">5 кг</span>
-            <span class="example__text">снижение веса</span>
-          </div>
-          <div class="example__result">
-            <span class="example__number">60 дней</span>
-            <span class="example__text">затрачено времени</span>
-          </div>
-        </div>
-        <h4 class="example__money-spent">затраты на питание: 15 000 руб.</h4>
-        <input type="checkbox" id="pic_sw" class="visually-hidden">
-        <div class="example__before">
-          <img src="../530049-cat-energy/source/img/before-mobile@1x.png" alt="Было">
-        </div>
-        <div class="example__after">
-          <img src="../530049-cat-energy/source/img/after-mobile@1x.png" alt="Стало">
-
-        </div>
-        <label for="pic_sw">было</label>
-        <label for="pic_sw">*</label>
-        <label for="pic_sw">стало</label>
-      </section>
     </main>
+    <section class="example">
+            <div class="example__caption-wrap">
+                <h2 class="example__caption">Живой пример</h2>
+            </div>
+            <div class="example__wrapper">
+              <div class="example__text-wrap">
+                  <p class="example__description">
+                  Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+                  </p>
+                <div class="example__list-wrapper">
+                      <div class="example__result">
+                        <span class="example__number">5 кг</span>
+                        <span class="example__text">снижение веса</span>
+                      </div>
+                      <div class="example__result">
+                        <span class="example__number">60 дней</span>
+                        <span class="example__text">затрачено времени</span>
+                      </div>
+                <h4 class="example__money-spent">затраты на питание: 15 000 руб.</h4>
+                </div>
+              </div>      
+              <div class="example__cat-wrap">
+                <input type="checkbox" id="pic_sw" class="visually-hidden">
+                <div class="example__before">
+                  <img src="../530049-cat-energy/source/img/before-mobile@1x.png" alt="Было">
+                </div>
+                <div class="example__after">
+                  <img src="../530049-cat-energy/source/img/after-mobile@1x.png" alt="Стало">
+
+                </div>
+                <label for="pic_sw">было</label>
+                <label for="pic_sw">*</label>
+                <label for="pic_sw">стало</label>
+            </div>
+          </div>
+      </section>
     <footer class="page-footer">
       <section class="partnership">
         <div class="partnership__header">
