всё кроме дополнительных товаров

--- a/catalog.html
+++ b/catalog.html
@@ -202,6 +202,7 @@
         </section>
         <section class="additional-goods">
           <h2 class="additional-goods__caption">Дополнительные товары</h2>
+            <div class="additional-goods__wrapper">
           <article class="additional-goods__item">
             <a class="additional-goods__caption" href="#">
               <h3>сахарозаменитель</h3>
@@ -250,10 +251,12 @@
             </table>
             <a class="additional-goods__button button" href="#">Заказать</a>
           </article>
+            </div>
+            <article class="additional-goods__promo">
+                <p class="additional-goods__promo-text"> Закажите все и получите чехол для кота в подарок!</p>
+            </article>
         </section>
-        <section class="catalog-promo">
-          <p class="catalog-promo__item"> Закажите все и получите чехол для кота в подарок!</p>
-        </section>
+        
       </div>
     </main>
     <footer class="page-footer">
