--- a/form.html
+++ b/form.html
@@ -31,68 +31,74 @@
       <h1 class="page-form__caption">Подбор программы</h1>
       <p class="page-form__description">заполните анкету и мы подберем программу питания для вашего кота</p>
       <form class="selection" method="post" action="https://echo.htmlacademy.ru">
-        <div class="selection__item form-cat-info">
-          <label class="form-cat-info__item">
-          имя:<sup>*</sup>
-          <input type="text" placeholder="БАРСИК" name="cat-name" required>
-          </label>
-          <label class="form-cat-info__item">
-          вес(кг):<sup>*</sup>
-          <input type="text" placeholder="7" name="cat-weight" required>
-          </label>
-          <label class="form-cat-info__item">
-          возраст(лет):
-          <input type="text" placeholder="7" name="cat-age" >
-          </label>
-        </div>
-        <div class="selection__item form-targets">
-          <label class="form-targets__item">
-          <input type="radio"  value="weight-loss" name="targets" checked >
-          похудение
-          </label>
-          <label class="form-targets__item">
-          <input type="radio"  value="mass-up" name="targets"  >
-          набор массы
-          </label>
-          <label class="form-targets__item">
-          <input type="radio"  value="dont-know" name="targets"  >
-          не знаю (нужен ваш совет)
-          </label >
-        </div>
+        <div class="selection__wrapper-top">
+            <div class="selection__item form-cat-info">
+              <label class="form-cat-info__item">
+              имя:<sup>*</sup>
+              <input type="text" placeholder="БАРСИК" name="cat-name" required>
+              </label>
+              <label class="form-cat-info__item">
+              вес(кг):<sup>*</sup>
+              <input type="text" placeholder="7" name="cat-weight" required>
+              </label>
+              <label class="form-cat-info__item">
+              возраст(лет):
+              <input type="text" placeholder="7" name="cat-age" >
+              </label>
+            </div>
+            <div class="selection__item form-targets">
+              <label class="form-targets__item">
+              <input type="radio"  value="weight-loss" name="targets" checked >
+              похудение
+              </label>
+              <label class="form-targets__item">
+              <input type="radio"  value="mass-up" name="targets"  >
+              набор массы
+              </label>
+              <label class="form-targets__item">
+              <input type="radio"  value="dont-know" name="targets"  >
+              не знаю (нужен ваш совет)
+              </label >
+            </div>
+          </div>
         <div class="selection__item  form-contacts">
           <h2 class= "form-contacts__caption">контактные данные (владельца кота)</h2>
-          <label class="form-contacts__item form-contacts__item--email">
-          e-mail:<sup>*</sup>
-          <input type="email" name="email" placeholder="KUKLACHEV@GMAIL.COM" required>
-          </label>
-          <label class="form-contacts__item form-contacts__item--phone">
-          телефон:<sup>*</sup>
-          <input type="tel" name="tel" placeholder="8 (960) 900-60-90" required>
-          </label>
+            <div class="selection__wrapper-contacts">
+              <label class="form-contacts__item form-contacts__item--email">
+              e-mail:<sup>*</sup>
+              <input type="email" name="email" placeholder="KUKLACHEV@GMAIL.COM" required>
+              </label>
+              <label class="form-contacts__item form-contacts__item--phone">
+              телефон:<sup>*</sup>
+              <input type="tel" name="tel" placeholder="8 (960) 900-60-90" required>
+              </label>
+            </div>
         </div>
         <div class="selection__item selection__item--comments">
           <h2 class="selection__caption">Комментарий</h2>
-          <textarea name="cat-comment" placeholder="РАССКАЖИТЕ ОБО ВСЕХ ПОВАДКАХ КОТА" rows="5" cols="20">
+          <textarea name="cat-comment" placeholder="расскажите обо всех повадках кота" rows="5" cols="20">
           </textarea>
         </div>
         <div class="selection__item extra">
           <h2 class="extra__caption">Дополнительно</h2>
-          <label class="extra__item">
-          <input type="checkbox" name="extra" value="sweetener" checked>
-          сахарозаменитель
-          </label>
-          <label class="extra__item">
-          <input type="checkbox" name="extra" value="water">
-          питьевая вода
-          </label>
-          <label class="extra__item">
-          <input type="checkbox" name="extra" value="milk">
-          молоко
-          </label>
-          <label class="extra__item">
-          <input type="checkbox" name="extra" value="vitamins">
-          витамины
-          </label>
+            <div class="extra__item-wrapper">
+              <label class="extra__item">
+              <input type="checkbox" name="extra" value="sweetener" checked>
+              сахарозаменитель
+              </label>
+              <label class="extra__item">
+              <input type="checkbox" name="extra" value="water">
+              питьевая вода
+              </label>
+              <label class="extra__item">
+              <input type="checkbox" name="extra" value="milk">
+              молоко
+              </label>
+              <label class="extra__item">
+              <input type="checkbox" name="extra" value="vitamins">
+              витамины
+              </label>
+            </div>
         </div>
         <button type="submit" class="selection-button button">отправить заявку</button> 
         <small class="selection__notice"><sup>*</sup>-Обязательные поля</small>
