шрифты Index catalog

--- a/catalog.html
+++ b/catalog.html
@@ -193,7 +193,7 @@
             </div>
             <a class="catalog__button button" href="#">Заказать</a>
           </article>
-          <article class="catalog__item catalog__item--more ">
+          <article class="catalog__item">
             <a class="catalog__plus-button" href="#">+</a>
             <h3 class="catalog__caption">показать ещё 100500 товаров</h3>
             <small class="catalog__small">На самом деле вкусов гораздо больше!</small>
@@ -202,57 +202,61 @@
         </section>
         <section class="additional-goods">
           <h2 class="additional-goods__caption">Дополнительные товары</h2>
-          <article class="additional-goods__item">
-            <a class="additional-goods__caption" href="#">
-              <h3>сахарозаменитель</h3>
-            </a>
-            <table class="additional-goods__table table">
-              <tr class="table__row">
-                <th class="table__column table__column--left">1 Упаковка</th>
-                <td class="table__column table__column--right">100 Р</td>
-              </tr>
-            </table>
-            <a class="additional-goods__button button" href="#">Заказать</a>
-          </article>
-          <article class="additional-goods__item">
-            <a class="additional-goods__caption" href="#">
-              <h3>питьевая вода</h3>
-            </a>
-            <table class="additional-goods__table table">
-              <tr class="table__row">
-                <th class="table__column table__column--left">5 литров</th>
-                <td class="table__column table__column--right">50 Р</td>
-              </tr>
-            </table>
-            <a class="additional-goods__button button" href="#">Заказать</a>
-          </article>
-          <article class="additional-goods__item">
-            <a class="additional-goods__caption" href="#">
-              <h3>молоко</h3>
-            </a>
-            <table class="additional-goods__table table">
-              <tr class="table__row">
-                <th class="table__column table__column--left">1 литр</th>
-                <td class="table__column table__column--right">100 Р</td>
-              </tr>
-            </table>
-            <a class="additional-goods__button button" href="#">Заказать</a>
-          </article>
-          <article class="additional-goods__item">
-            <a class="additional-goods__caption" href="#">
-              <h3>витамины</h3>
-            </a>
-            <table class="additional-goods__table table">
-              <tr class="table__row">
-                <th class="table__column table__column--left">1 Упаковка (30 г)</th>
-                <td class="table__column table__column--right">300 Р</td>
-              </tr>
-            </table>
-            <a class="additional-goods__button button" href="#">Заказать</a>
-          </article>
-        </section>
-        <section class="catalog-promo">
-          <p class="catalog-promo__item"> Закажите все и получите чехол для кота в подарок!</p>
+            <div class="additional-goods__wrapper">
+                <div class="additional-goods__wrapper-inside">
+                  <article class="additional-goods__item">
+                    <a class="additional-goods__name" href="#">
+                      <h3>сахарозаменитель</h3>
+                    </a>
+                    <table class="additional-goods__table table">
+                      <tr class="table__row">
+                        <th class="table__column table__column--left">1 Упаковка</th>
+                        <td class="table__column table__column--right">100 Р</td>
+                      </tr>
+                    </table>
+                    <a class="additional-goods__button button" href="#">Заказать</a>
+                  </article>
+                  <article class="additional-goods__item">
+                    <a class="additional-goods__name" href="#">
+                      <h3>питьевая вода</h3>
+                    </a>
+                    <table class="additional-goods__table table">
+                      <tr class="table__row">
+                        <th class="table__column table__column--left">5 литров</th>
+                        <td class="table__column table__column--right">50 Р</td>
+                      </tr>
+                    </table>
+                    <a class="additional-goods__button button" href="#">Заказать</a>
+                  </article>
+                  <article class="additional-goods__item">
+                    <a class="additional-goods__name" href="#">
+                      <h3>молоко</h3>
+                    </a>
+                    <table class="additional-goods__table table">
+                      <tr class="table__row">
+                        <th class="table__column table__column--left">1 литр</th>
+                        <td class="table__column table__column--right">100 Р</td>
+                      </tr>
+                    </table>
+                    <a class="additional-goods__button button" href="#">Заказать</a>
+                  </article>
+                  <article class="additional-goods__item">
+                    <a class="additional-goods__name" href="#">
+                      <h3>витамины</h3>
+                    </a>
+                    <table class="additional-goods__table table">
+                      <tr class="table__row">
+                        <th class="table__column table__column--left">1 Упаковка (30 г)</th>
+                        <td class="table__column table__column--right">300 Р</td>
+                      </tr>
+                    </table>
+                    <a class="additional-goods__button button" href="#">Заказать</a>
+                  </article>
+                </div>
+                <article class="additional-goods__promo">
+                    <span class="additional-goods__promo-item"> Закажите все и получите чехол для кота в подарок!</span>
+                </article>
+            </div>    
         </section>
       </div>
     </main>
