--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
                   <img src="../530049-cat-energy/source/img/after-mobile@1x.png" alt="Стало">
 
                 </div>
-                <label for="pic_sw">было</label>
+                <label for="pic_sw" class="example__toggles">было</label>
                 <label for="pic_sw">*</label>
-                <label for="pic_sw">стало</label>
+                <label for="pic_sw" class="example__toggles">стало</label>
             </div>
           </div>
       </section>
