шрифты и флексы полностью

--- a/catalog.html
+++ b/catalog.html
@@ -262,7 +262,7 @@
     </main>
     <footer class="page-footer">
       <section class="partnership">
-        <div class="partnership__header">
+          <div class="partnership__wrapper">
           <h3 class="partnership__invite"> приглашаем к сотрудничеству дилеров!</h3>
           <p class="partnership__address">
             ул. Большая Конюшенная, д.19/8 Санкт-Петербург
