--- a/form.html
+++ b/form.html
@@ -15,13 +15,13 @@
       </div>
       <nav class="page-header__nav main-nav">
         <ul class="main-nav__list ">
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav__item--black">
             <a href="index.html">Главная</a>
           </li>
-          <li class="main-nav__item ">
+          <li class="main-nav__item main-nav__item--black">
             <a href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="main-nav__item main-nav__item--active">
+          <li class="main-nav__item main-nav__item--active main-nav__item--black">
             <a>Подбор программы</a>
           </li>
         </ul>
@@ -106,7 +106,7 @@
     </main>
  <footer class="page-footer">
       <section class="partnership">
-        <div class="partnership__header">
+          <div class="partnership__wrapper">
           <h3 class="partnership__invite"> приглашаем к сотрудничеству дилеров!</h3>
           <p class="partnership__address">
             ул. Большая Конюшенная, д.19/8 Санкт-Петербург
