--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                       </div>
                 <h4 class="example__money-spent">затраты на питание: 15 000 руб.</h4>
                 </div>
-              </div>      
+              </div>
               <div class="example__cat-wrap">
-                <input type="checkbox" id="pic_sw" class="visually-hidden">
+                <input type="checkbox" id="pic_sw" class="visually-hidden pic_sw">
                 <div class="example__before">
                   <img src="../530049-cat-energy/source/img/before-mobile@1x.png" alt="Было">
                 </div>
@@ -117,7 +117,7 @@
       </section>
       <div class="map-wrapper">map
       </div>
-      <div class="page-footer__wrapper">    
+      <div class="page-footer__wrapper">
           <a class="page-footer__logo" href="#"><img src="http://placehold.it/50x30" alt="Логотип Cat Energy"></a>
           <div class="page-footer__social social">
             <a class="social__link social__link--vkontakte" href="#">vkontante</a>
